调整开源协议为MIT、网关支持动态路由、优化其它功能

--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -89,7 +89,7 @@ ignore:
     - /v2/api-docs
     - /csrf
     - /actuator/**
-    - /hystrix.stream
+    - /hystrix.sender
     - /v1/user/findUserByUsername/**
     - /v1/code/**
     - /v1/attachment/download
