--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -107,8 +107,9 @@ ignore:
     - /v2/api-docs
     - /csrf
     - /actuator/**
-    - /hystrix.stream
+    - /hystrix.sender
     - /v1/user/findUserByUsername/**
+    - /v1/user/register
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
