--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -109,6 +109,7 @@ ignore:
     - /actuator/**
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
+    - /v1/menu/findMenuByRole/**
     - /v1/user/register
     - /v1/code/**
     - /v1/attachment/download
