--- a/config-service/src/main/resources/config/auth-service.yml
+++ b/config-service/src/main/resources/config/auth-service.yml
@@ -77,6 +77,7 @@ ignore:
     - /actuator/**
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
+    - /v1/menu/findMenuByRole/**
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
