--- a/common/common-log/pom.xml
+++ b/common/common-log/pom.xml
@@ -5,7 +5,7 @@
     <parent>
     <groupId>com.github.tangyi</groupId>
     <artifactId>common</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
 </parent>
     <artifactId>common-log</artifactId>
     <name>${project.artifactId}</name>
