--- a/service-api/exam-api/pom.xml
+++ b/service-api/exam-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>service-api</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <artifactId>exam-api</artifactId>
     <name>${project.artifactId}</name>
