--- a/zipkin-service/pom.xml
+++ b/zipkin-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.tangyi</groupId>
         <artifactId>spring-microservice-exam</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <artifactId>zipkin-service</artifactId>
     <packaging>pom</packaging>
