修复bug、增加演示环境相关内容

--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -63,6 +63,19 @@ swagger:
     - exam-service
     - auth-service
 
+# 演示环境
+preview:
+  enabled: ${PREVIEW_ENABLED:false}
+  ignoreUrls:
+    - token
+    - examRecord
+    - saveOrUpdate
+    - register
+    - submit
+    - checkExist
+    - updateInfo
+    - attachment
+
 logging:
   level:
     root: info
