--- a/config-service/src/main/resources/config/auth-service.yml
+++ b/config-service/src/main/resources/config/auth-service.yml
@@ -83,6 +83,7 @@ ignore:
     - /actuator/**
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
+    - /v1/user/checkExist/**
     - /v1/menu/findMenuByRole/**
     - /v1/code/**
     - /v1/attachment/download
