--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -98,6 +98,7 @@ ignore:
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
     - /v1/menu/findMenuByRole/**
+    - /v1/user/checkExist/**
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
