--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -59,7 +59,8 @@ services:
   # Redis
   # ---------------------------
   redis:
-    image: redis:alpine
+    image: redis:latest
+    container_name: redis
     ports:
       - "6379:6379"
     networks:
