--- a/config-service/src/main/resources/config/monitor-service.yml
+++ b/config-service/src/main/resources/config/monitor-service.yml
@@ -36,3 +36,8 @@ spring:
   # zipkin 配置
   zipkin:
     base-url: http://${ZIPKIN_HOST:localhost}:${ZIPKIN_PORT:9411}  # 指定了Zipkin服务器的地址
+
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
