--- a/docker-compose.env
+++ b/docker-compose.env
@@ -49,3 +49,10 @@ ZIPKIN_PORT=9411
 
 // 演示环境
 PREVIEW_ENABLED=false
+
+// ID生成配置
+CLUSTER_WORK_ID=1
+CLUSTER_DATA_CENTER_ID=1
+
+// 时区设置，否则容器里的时间和主机时间差8小时
+TZ=Asia/Shanghai
