--- a/config-service/src/main/resources/config/auth-service.yml
+++ b/config-service/src/main/resources/config/auth-service.yml
@@ -67,10 +67,10 @@ mybatis:
     lazy-loading-enabled: true
   mapper-locations: classpath:mapper/*.xml
 pagehelper:
-    helperDialect: mysql
-    reasonable: true
-    supportMethodsArguments: true
-    params: count=countSql
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
 
 ignore:
   urls:
@@ -85,6 +85,7 @@ ignore:
     - /v1/user/findUserByUsername/**
     - /v1/user/checkExist/**
     - /v1/menu/findMenuByRole/**
+    - /v1/menu/findAllMenu
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
@@ -100,8 +101,15 @@ ignore:
     - /loggers/**
     - /mobile/token
 
-mobile:
-  token: test
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
+
+# 系统配置
+sys:
+  adminUser: ${ADMIN_USER:admin}  # 管理员账号，默认是admin
+
 logging:
   level:
     root: info
