--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -98,6 +98,7 @@ ignore:
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
     - /v1/menu/findMenuByRole/**
+    - /v1/menu/findAllMenu
     - /v1/user/checkExist/**
     - /v1/code/**
     - /v1/attachment/download
@@ -113,6 +114,11 @@ ignore:
     - /metrics/**
     - /loggers/**
     - /mobile/token
+
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
 
 logging:
   level:
