--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -122,6 +122,7 @@ ignore:
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
     - /v1/menu/findMenuByRole/**
+    - /v1/menu/findAllMenu
     - /v1/user/register
     - /v1/user/checkExist/**
     - /v1/code/**
@@ -139,6 +140,11 @@ ignore:
     - /loggers/**
     - /mobile/token
     - /bus/refresh
+
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
 
 logging:
   level:
