--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -7,8 +7,8 @@ spring:
   rabbitmq:
     host: ${RABBIT_HOST:localhost}
     port: ${RABBIT_PORT:5672}
-    username: guest
-    password: guest
+    username: ${RABBITMQ_DEFAULT_USER:guest}
+    password: ${RABBITMQ_DEFAULT_PASS:guest}
   boot:
     admin:
       client:
@@ -16,7 +16,7 @@ spring:
         username: ${ADMIN_USERNAME:admin}
         password: ${ADMIN_PASSWORD:11}
         instance:
-          service-base-url: http://localhost:${server.port}
+          service-base-url: http://${GATEWAY_SERVICE_HOST:localhost}:${server.port}
   # sleuth 配置
   sleuth:
     web:
@@ -26,7 +26,7 @@ spring:
       probability: 1.0 # 采样比例为: 0.1(即10%),设置的值介于0.0到1.0之间，1.0则表示全部采集。
   # zipkin 配置
   zipkin:
-    base-url: http://localhost:9411  # 指定了Zipkin服务器的地址
+    base-url: http://${ZIPKIN_HOST:localhost}:${ZIPKIN_PORT:9411}  # 指定了Zipkin服务器的地址
 
 security:
   encode:
@@ -62,6 +62,24 @@ swagger:
     - user-service
     - exam-service
     - auth-service
+
+# 演示环境
+preview:
+  enabled: ${PREVIEW_ENABLED:false}
+  ignores:
+    - token
+    - examRecord
+    - saveOrUpdate
+    - register
+    - submit
+    - checkExist
+    - updateInfo
+    - attachment
+
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
 
 logging:
   level:
