--- a/config-service/src/main/resources/config/auth-service.yml
+++ b/config-service/src/main/resources/config/auth-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8090
 spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:192.168.0.144}:${MYSQL_PORT:3306}/microservice-auth?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
@@ -13,8 +13,8 @@ spring:
   rabbitmq:
     host: ${RABBIT_HOST:localhost}
     port: ${RABBIT_PORT:5672}
-    username: guest
-    password: guest
+    username: ${RABBITMQ_DEFAULT_USER:guest}
+    password: ${RABBITMQ_DEFAULT_PASS:guest}
   boot:
     admin:
       client:
@@ -22,7 +22,7 @@ spring:
         username: ${ADMIN_USERNAME:admin}
         password: ${ADMIN_PASSWORD:11}
         instance:
-          service-base-url: http://localhost:${server.port}
+          service-base-url: http://${AUTH_SERVICE_HOST:localhost}:${server.port}
   # sleuth 配置
   sleuth:
     web:
@@ -32,7 +32,7 @@ spring:
       probability: 1.0 # 采样比例为: 0.1(即10%),设置的值介于0.0到1.0之间，1.0则表示全部采集。
   # zipkin 配置
   zipkin:
-    base-url: http://localhost:9411  # 指定了Zipkin服务器的地址
+    base-url: http://${ZIPKIN_HOST:localhost}:${ZIPKIN_PORT:9411}  # 指定了Zipkin服务器的地址
 
 feign:
   hystrix:
@@ -67,10 +67,10 @@ mybatis:
     lazy-loading-enabled: true
   mapper-locations: classpath:mapper/*.xml
 pagehelper:
-    helperDialect: mysql
-    reasonable: true
-    supportMethodsArguments: true
-    params: count=countSql
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
 
 ignore:
   urls:
@@ -83,7 +83,9 @@ ignore:
     - /actuator/**
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
+    - /v1/user/checkExist/**
     - /v1/menu/findMenuByRole/**
+    - /v1/menu/findAllMenu
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
@@ -99,8 +101,15 @@ ignore:
     - /loggers/**
     - /mobile/token
 
-mobile:
-  token: test
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
+
+# 系统配置
+sys:
+  adminUser: ${ADMIN_USER:admin}  # 管理员账号，默认是admin
+
 logging:
   level:
     root: info
