--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8098
 spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:192.168.0.144}:${MYSQL_PORT:3306}/microservice-exam?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
@@ -13,8 +13,8 @@ spring:
   rabbitmq:
     host: ${RABBIT_HOST:localhost}
     port: ${RABBIT_PORT:5672}
-    username: guest
-    password: guest
+    username: ${RABBITMQ_DEFAULT_USER:guest}
+    password: ${RABBITMQ_DEFAULT_PASS:guest}
   boot:
     admin:
       client:
@@ -22,7 +22,7 @@ spring:
         username: ${ADMIN_USERNAME:admin}
         password: ${ADMIN_PASSWORD:11}
         instance:
-          service-base-url: http://localhost:${server.port}
+          service-base-url: http://${EXAM_SERVICE_HOST:localhost}:${server.port}
   # sleuth 配置
   sleuth:
     web:
@@ -32,7 +32,7 @@ spring:
       probability: 1.0 # 采样比例为: 0.1(即10%),设置的值介于0.0到1.0之间，1.0则表示全部采集。
   # zipkin 配置
   zipkin:
-    base-url: http://localhost:9411  # 指定了Zipkin服务器的地址
+    base-url: http://${ZIPKIN_HOST:localhost}:${ZIPKIN_PORT:9411}  # 指定了Zipkin服务器的地址
 security:
   oauth2:
     client:
@@ -98,6 +98,8 @@ ignore:
     - /hystrix.sender
     - /v1/user/findUserByUsername/**
     - /v1/menu/findMenuByRole/**
+    - /v1/menu/findAllMenu
+    - /v1/user/checkExist/**
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
@@ -112,6 +114,11 @@ ignore:
     - /metrics/**
     - /loggers/**
     - /mobile/token
+
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
 
 logging:
   level:
