--- a/docker-compose.env
+++ b/docker-compose.env
@@ -16,17 +16,17 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 // 数据库配置
-MYSQL_HOST=192.168.0.144
+MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USERNAME=platform
 MYSQL_PASSWORD=11
 
 // FDFS配置
-FDFS_HOST=192.168.0.95
+FDFS_HOST=localhost
 FDFS_PORT=22122
 
 // 附件服务器配置
-ATTACHMENT_HOST=http://192.168.0.95
+ATTACHMENT_HOST=http://localhost
 ATTACHMENT_PORT=80
 
 // 各服务host配置
