--- a/service-api-impl/auth-service/src/main/resources/bootstrap.yml
+++ b/service-api-impl/auth-service/src/main/resources/bootstrap.yml
@@ -25,3 +25,9 @@ encrypt:
     location: classpath:/jwt.jks
     alias: jwt
     password: abc123
+
+
+logging:
+  level:
+    root: info
+    com.github.tangyi: debug
