--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -111,6 +111,7 @@ ignore:
     - /v1/menu/findMenuByRole/**
     - /v1/menu/findAllMenu
     - /v1/user/checkExist/**
+    - /v1/user/updatePassword
     - /v1/code/**
     - /v1/attachment/download
     - /v1/log/**
@@ -125,7 +126,6 @@ ignore:
     - /health
     - /metrics/**
     - /loggers/**
-    - /mobile/token
 
 # 集群ID生成配置
 cluster:
