--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -106,7 +106,9 @@ ignore:
     - /csrf
     - /actuator/**
     - /hystrix.sender
+    - /v1/sms/**
     - /v1/user/findUserByUsername/**
+    - /v1/user/findUserBySocial/**
     - /v1/tenant/findTenantByTenantCode/**
     - /v1/menu/findMenuByRole/**
     - /v1/menu/findAllMenu
