--- a/config-service/src/main/resources/config/msc-service.yml
+++ b/config-service/src/main/resources/config/msc-service.yml
@@ -28,8 +28,8 @@ management:
       show-details: ALWAYS
 
 sms:
-  appKey:
-  appSecret:
+  appKey: test
+  appSecret: test
   regionId: cn-hangzhou
   domain: dysmsapi.aliyuncs.com
 
@@ -43,26 +43,18 @@ ignore:
     - /csrf
     - /actuator/**
     - /hystrix.sender
-    - /v1/user/findUserByUsername/**
-    - /v1/tenant/findTenantByTenantCode/**
-    - /v1/user/checkExist/**
-    - /v1/user/updatePassword
-    - /v1/menu/findMenuByRole/**
-    - /v1/menu/findAllMenu
-    - /v1/code/**
-    - /v1/attachment/download
-    - /v1/log/**
-    - /authentication/**
-    - /v1/authentication/**
+    - /v1/sms/**
     - /**/*.css
     - /**/*.js
-    - /social
-    - /signin
-    - /signup
     - /info
     - /health
     - /metrics/**
     - /loggers/**
+
+# 集群ID生成配置
+cluster:
+  workId: ${CLUSTER_WORKID:1}
+  dataCenterId: ${CLUSTER_DATA_CENTER_ID:1}
 
 logging:
   level:
