--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -130,7 +130,10 @@ ignore:
     - /csrf
     - /actuator/**
     - /hystrix.sender
+    - /v1/sms/**
+    - /v1/mobile/**
     - /v1/user/findUserByUsername/**
+    - /v1/user/findUserBySocial/**
     - /v1/tenant/findTenantByTenantCode/**
     - /v1/menu/findMenuByRole/**
     - /v1/menu/findAllMenu
