--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -28,16 +28,16 @@ spring:
   zipkin:
     base-url: http://${ZIPKIN_HOST:localhost}:${ZIPKIN_PORT:9411}  # 指定了Zipkin服务器的地址
 
-security:
-  encode:
-    key: '1234567887654321'
+# 系统配置
+sys:
+  adminUser: ${ADMIN_USER:admin}  # 管理员账号，默认是admin
+  fdfsHttpHost: ${ATTACHMENT_HOST:http://192.168.0.95}:${ATTACHMENT_PORT:8080}  # fastDfs的HTTP配置
+  uploadUrl: api/user/v1/attachment/upload
+  defaultAvatar: https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif?imageView2/1/w/80/h/80
+  key: '1234567887654321'
 
 # feign相关配置
 feign:
-  httpclient:
-    enabled: false
-  okhttp:
-    enabled: true
   hystrix:
     enabled:  true
 
@@ -83,9 +83,10 @@ preview:
     - api/msc
 
 # 开启网关token转换
+# 暂时关闭，此功能在微信端登录有问题
 gateway:
   token-transfer:
-    enabled: ${GATEWAY_TOKEN_TRANSFER:true}
+    enabled: ${GATEWAY_TOKEN_TRANSFER:false}
 
 # 集群ID生成配置
 cluster:
