增加学生模块，优化缓存失效时间

--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -98,6 +98,7 @@ sys:
   uploadUrl: api/user/v1/attachment/upload
   defaultAvatar: https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif?imageView2/1/w/80/h/80
   key: '1234567887654321'
+  cacheExpire: 86400 # 缓存失效时间，单位秒，默认一天
 
 # feign相关配置
 feign:
