--- a/config-service/src/main/resources/config/exam-service.yml
+++ b/config-service/src/main/resources/config/exam-service.yml
@@ -73,6 +73,10 @@ pagehelper:
   supportMethodsArguments: true
   params: count=countSql
 
+# 系统配置
+sys:
+  cacheExpire: 86400 # 缓存失效时间，单位秒，默认一天
+
 # feign相关配置
 feign:
   httpclient:
